add style skeleton for header

--- a/app/src/jade/index.jade
+++ b/app/src/jade/index.jade
@@ -20,4 +20,4 @@ block content
 		.c-header--right
 			a(href="#")
 				img(src="#").c-header-brand
-			.c-header--brand__name stuboki
+			.c-header__brand-name stuboki
