add font-family lato

--- a/app/src/jade/views/_layout.jade
+++ b/app/src/jade/views/_layout.jade
@@ -5,10 +5,10 @@ html(lang="en")
 	block vars
 	head
 		block title
-			title #{pageTitle} - My Static Site
+			title #{pageTitle} - frontlabster
+		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:400,300,700')
 		link(rel='stylesheet', href='assets/css/screen.css')
 	body(class='#{bodyClass}')
-		
-		block content
 
+		block content
 		script(src='assets/js/script.js')
