--- a/app/src/jade/index.jade
+++ b/app/src/jade/index.jade
@@ -19,9 +19,6 @@ block content
 
 		.c-header--right
 			a(href="#")
-				img(src="#").c-header-brand
-			.c-header__brandname stuboki
-
-
-
+				img(src="#").c-header--brand-logo
+			.c-header__brand-name stuboki
 
