--- a/app/src/jade/views/_layout.jade
+++ b/app/src/jade/views/_layout.jade
@@ -9,6 +9,6 @@ html(lang="en")
 		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:400,300,700')
 		link(rel='stylesheet', href='assets/css/screen.css')
 	body(class='#{bodyClass}')
-
+		include ../partials/_header
 		block content
 		script(src='assets/js/script.js')
