add child selector on header-list

--- a/app/src/assets/sass/components/_header.scss
+++ b/app/src/assets/sass/components/_header.scss
@@ -22,7 +22,7 @@
 	    text-align: center;
 	    align-items: center
     }
-    &__item-link {
+    &--list > &__item-link {
 	    text-align: center;
 	    margin: 10px 20px;
 	    a {
