--- a/app/src/assets/sass/screen.scss
+++ b/app/src/assets/sass/screen.scss
@@ -10,6 +10,7 @@
 
 // SETTINGSS - Globally-available variables and config
 @import 'settings/default';
+@import 'settings/colors';
 @import 'generic/debug'; // Debug mode
 
 // TOOLS - Usefull mixins
