--- a/app/src/assets/sass/settings/_colors.scss
+++ b/app/src/assets/sass/settings/_colors.scss
@@ -1,3 +1,8 @@
 /*------------------------------------*\
 		COLORS
 \*------------------------------------*/
+
+// Core colors
+$black: #000000;
+$dark-grey: #aaa;
+$white: #ffffff;
