--- a/app/src/jade/partials/_header.jade
+++ b/app/src/jade/partials/_header.jade
@@ -13,6 +13,6 @@ nav.c-header
 
 	.c-header--right
 		a(href="#")
-			img(src="#").c-header--brand-logo
-		.c-header--brand-name stuboki
+			img(src="../assets/img/logo.svg").c-header--brand-logo
+		.c-header__brand-name stuboki
 
