add link on brandname

--- a/app/src/jade/index.jade
+++ b/app/src/jade/index.jade
@@ -5,3 +5,12 @@ block vars
 
 block content
 
+	.c-banner.o-wrapper--100
+		h1.c-banner__title
+		.c-banner__link-line
+
+		.o-container-right
+			.c-banner__link-text
+			.c-banner__link-line
+			.c-avatar--small
+
