--- a/app/src/jade/partials/_header.jade
+++ b/app/src/jade/partials/_header.jade
@@ -14,5 +14,5 @@ nav.c-header
 	.c-header--right
 		a(href="#")
 			img(src="../assets/img/logo.svg").c-header--brand-logo
-		.c-header__brand-name stuboki
+		a(href="#").c-header__brand-name stuboki
 
