add banner background

--- a/app/src/jade/index.jade
+++ b/app/src/jade/index.jade
@@ -5,12 +5,15 @@ block vars
 
 block content
 
-	.c-banner.o-wrapper--100
-		h1.c-banner__title
-		.c-banner__link-line
-
+	.c-banner
+		.c-banner--background
+		h1.c-banner__title Welcome to Stuboki world.
+		.c-banner--url__line
+			a(href="#") Sign Up
 		.o-container-right
-			.c-banner__link-text
-			.c-banner__link-line
+			.c-banner--url__text
+				a(href="#") Created by
+			.c-banner--url__line
+				@vanquocbui
 			.c-avatar--small
-
+				img(src="#", alt="")
