--- a/app/src/jade/index.jade
+++ b/app/src/jade/index.jade
@@ -7,13 +7,16 @@ block content
 
 	.c-banner
 		.c-banner--background
-		h1.c-banner__title Welcome to Stuboki world.
-		.c-banner--url__line
-			a(href="#") Sign Up
-		.o-container-right
-			.c-banner--url__text
-				a(href="#") Created by
-			.c-banner--url__line
-				@vanquocbui
-			.c-avatar--small
-				img(src="#", alt="")
+		.o-container
+			.c-banner--left
+				h1.c-banner__title Welcome to Stuboki world.
+				.c-banner--url__line
+					a(href="#") Sign Up
+
+			.c-banner--right
+					a(href="#").c-banner--detail
+						span.c-banner--url__text Created by
+						span.c-banner--url__line @vanquocbui
+						img(src="http://placehold.it/30x30", alt="").c-avatar--small
+
+
