--- a/app/src/jade/partials/_header.jade
+++ b/app/src/jade/partials/_header.jade
@@ -1,7 +1,7 @@
 nav.c-header
 	.c-header--left
 		ul.c-header--list
-			li.c-header__item-link
+			li.c-header__item-link.c-banner--url__line
 				a(href="#") Discover
 			li.c-header__item-link
 				a(href="#")
