add active links on the header + add opacity on logo

--- a/app/src/jade/partials/_header.jade
+++ b/app/src/jade/partials/_header.jade
@@ -1,8 +1,8 @@
 nav.c-header
 	.c-header--left
 		ul.c-header--list
-			li.c-header__item-link.c-banner--url__line
-				a(href="#") Discover
+			li.c-header__item-link
+				a(href="#").active Discover
 			li.c-header__item-link
 				a(href="#")
 					i.mdi.mdi-magnify
