--- a/app/src/assets/sass/components/_header.scss
+++ b/app/src/assets/sass/components/_header.scss
@@ -1,69 +1,72 @@
 /*------------------------------------*\
 	#HEADER
-\*------------------------------------*/
+	\*------------------------------------*/
 
-.c-header {
-	    @include flex-align(justify, null)
-	    @include container;
-	    height: em(90px, $em-base);
-	    background-color: $black;
+	.c-header {
+		@include flex-align(justify, null)
+		@include container;
+		height: em(90px, $em-base);
+		background-color: $black;
     //header-left
     .c-header > &--left {
     	@include flex-align(null,center);
-	    flex: 0 0 67.5%;
-	    margin-left: 2.5%;
+    	flex: 0 0 67.5%;
+    	margin-left: 2.5%;
     }
     &--list,
     ul.c-header--list {
-	    @include flex-align(null,center);
-	    @include container;
-	    flex: 1;
-	    text-align: center;
+    	@include flex-align(null,center);
+    	@include container;
+    	flex: 1;
+    	text-align: center;
     }
     &--list > &__item-link,
     li.c-header__item-link {
-	    text-align: center;
-	    margin: rem(10px 20px);
-	    @include media('<=tablet') {
-			&:nth-child(3) {
-				display: none;
-				width: em(90px,$em-base);
-			}
-			&:nth-child(4) {
-				margin: rem(0px 0);
-			}
-		}
-	    a {
-	    	color: $white;
-	    	&:hover {
-	    		opacity: 0.7;
-	    	}
-	    }
-	    i {
-	    	font-size: em(20px, $em-base);
-	    }
-	    &:nth-child(odd) {
-	    	margin: rem(10px 0);
-	    }
+    	text-align: center;
+    	margin: rem(10px 20px);
+    	@include media('<=tablet') {
+    		&:nth-child(3) {
+    			display: none;
+    			width: em(90px,$em-base);
+    		}
+    		&:nth-child(4) {
+    			margin: rem(0px 0);
+    		}
+    	}
+    	a {
+    		color: $white;
+    		&:hover, &.active {
+    			opacity: 0.7;
+    			border-bottom: 1px solid white;
+    			padding-bottom: 2px;
+    		}
+    	}
+    	i {
+    		font-size: em(20px, $em-base);
+    	}
+    	&:nth-child(odd) {
+    		margin: rem(10px 0);
+    	}
     }
     //header-right
     .c-header > &--right {
     	@include flex-align(right, center);
-	    flex: 0 0 27.5%;
-	    margin-right: 2.5%;
+    	flex: 0 0 27.5%;
+    	margin-right: 2.5%;
     }
     &--brand-logo{
     	margin: rem(0 5px);
     	width: em(45px,$em-base);
+    	opacity: 0.5;
     	@include media('<=tablet') {
-			display: none;
-			width: em(90px,$em-base);
-		}
+    		display: none;
+    		width: em(90px,$em-base);
+    	}
     }
     &__brand-name,
     a.c-header__brand-name {
     	text-transform: uppercase;
-    	font-size: em(19px, $em-base);
+    	font-size: em(16px, $em-base);
     	font-weight: 700;
     	color: $white;
     }
