--- a/app/src/assets/sass/components/_banner.scss
+++ b/app/src/assets/sass/components/_banner.scss
@@ -1,65 +1,71 @@
 .c-banner {
+	@include container;
 	display: inline-block;
 	position: relative;
 	width: 100%;
-	height: 380px;
+	height: em(380px, $em-base);
 	&--background {
+	    @include position(absolute, 0, 0, 0, 0);
 		background-image: url("../img/banner.jpg");
 		z-index: -1;
-		position: absolute;
-	    top: 0px;
-	    bottom: 0px;
-	    left: 0;
-	    right: 0;
-	    height: 380px;
 	    background-position: center center;
-	    background-size: cover;
+	    background-size: cover !important;
 	}
 	&--left {
+		@include flex-align(center, center);
 		flex: 0 0 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	    flex-direction: column;
+	    @include media('>phone', '<tablet'){
+    		flex: 0 0 70%;
+    	}
 	}
-
 	&__title {
-		color: white;
+		color: $white;
+    	font-size: em(35px, $em-base);
 		opacity: 0.9;
-    	font-size: 35px;
     	font-weight: 400;
+    	@include media('>phone'){
+			font-size: em(22px, $em-base);
+    	}
+    	@include media('>tablet'){
+			font-size: em(25px, $em-base);
+    	}
 	}
-
 	&--right {
-		display: flex;
+		@include flex-align(right, bottom)
+    	margin-bottom: em(20px, $em-base);
     	flex-direction: row;
-    	align-items: flex-end;
     	flex: 0 0 50%;
-    	justify-content: flex-end;
-    	margin-bottom: 20px;
+    	@include media('>phone', '<tablet'){
+    		@include flex-align(center, bottem)
+    		flex: 0 0 30%;
+    	}
 	}
-
 	&--url__line > a,
 	span.c-banner--url__line {
 		color: white;
     	font-weight: 100;
-    	border-bottom: 1px solid white;
-    	padding-bottom: 2px;
-    	margin: 0 10px;
+    	border-bottom: em(1px solid $white, $em-base);
+    	padding-bottom: em(2px, $em-base);
+    	margin: em(0 10px, $em-base);
     	&:hover {
     		opacity:0.7;
     	}
 	}
 	&--detail, a.c-banner--detail {
-		display: flex;
-		align-items: center;
-		justify-content: center;
+		@include flex-align(center, center)
 		color: $white;
 		&:hover {
     		opacity:0.7;
     	}
+    	@include media('>phone'){
+			font-size: em(13px, $em-base);
+    	}
+    	@include media('>phone', '<tablet'){
+    		margin-bottom: 20px;
+    	}
 	}
 	&--url__text {
-		color: white;
+		color: $white;
 	}
 }
