add styling breadcrumb + responsive

--- a/app/src/jade/index.jade
+++ b/app/src/jade/index.jade
@@ -19,4 +19,13 @@ block content
 						span.c-banner--url__line @vanquocbui
 						img(src="http://placehold.it/30x30", alt="").c-avatar--small
 
+	.c-breadcrumb
+		.o-container
+			ul.c-breadcrumb--list
+				li.c-breadcrumb__item.active
+					a(href="").active Recommend
+				li.c-breadcrumb__item
+					a(href="") Trending
+				li.c-breadcrumb__item
+					a(href="") Recent
 
