--- a/app/src/assets/sass/components/_breadcrumb.scss
+++ b/app/src/assets/sass/components/_breadcrumb.scss
@@ -1,33 +1,27 @@
 .c-breadcrumb {
 	width: 100%;
     flex: 1;
-    height: 100px;
+    height: em(150px, $em-base);
 	&--list, ul.c-breadcrumb--list {
-		display: flex;
+		@include flex-align(center, center);
 	    flex: 1;
-	    justify-content: flex-end;
-	    align-items: center;
-		@include media('>phone', '<=tablet'){
-			justify-content: center;;
-		}
 	}
 	.c-breadcrumb--list > &__item,
 	li.c-breadcrumb__item {
-	    display: flex;
-	    justify-content: center;
-	    align-items: center;
-	    padding: 15px;
+		@include flex-align(center, center);
+	    padding: em(15px,$em-base);
 	    &:last-child {
 	    	padding-right:0;
 	    }
 	    @include media('>phone', '<=tablet'){
-	    	padding: 5px;
+	    	padding: em(5px,$em-base);
 	    }
 		a {
-			color: black;
-			font-size: 20px;
+			transition: all 200ms;
+			color: $black;
+			font-size: em(20px,$em-base);
 			@include media('>phone', '<=tablet'){
-		    	font-size: 15px;
+		    	font-size: em(15px, $em-base);
 	    	}
 			&:hover, &.active{
 				opacity: 0.7;
