--- a/app/src/jade/index.jade
+++ b/app/src/jade/index.jade
@@ -17,7 +17,8 @@ block content
 					a(href="#").c-banner--detail
 						span.c-banner--url__text Created by
 						span.c-banner--url__line @vanquocbui
-						img(src="http://placehold.it/30x30", alt="").c-avatar--small
+						.c-avatar--small
+							img(src="./assets/img/quoc.jpg", alt="")
 
 	.c-breadcrumb
 		.o-container
@@ -28,4 +29,289 @@ block content
 					a(href="") Trending
 				li.c-breadcrumb__item
 					a(href="") Recent
+
+	.c-grid
+		.o-container
+			.c-grid--row
+				.c-grid--col
+					.c-card
+						.c-card__header
+							a(href="").c-card__header-link.o-block.o-flex--cell
+								.c-avatar--small
+									img(src="./assets/img/john.jpeg", alt="")
+								.c-card__user @johny93
+							ul.o-block
+								.c-button--cirkel.c-button__follow
+									a(href="")
+										i.mdi.mdi-plus
+								.c-card__icon
+									a(href="")
+										i.mdi.mdi-star-outline
+						.c-card__body
+							a(href="")
+								img(src="./assets/img/banner1.jpg", alt="")
+						.c-card__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quaerat!
+						.c-card__footer
+							ul.c-card--list
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-eye
+											span 43
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-comment-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-heart-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-repeat
+							.c-button__grey
+								a(href="") Share
+				.c-grid--col
+					.c-card
+						.c-card__header
+							a(href="").c-card__header-link.o-block.o-flex--cell
+								.c-avatar--small
+									img(src="./assets/img/jan.jpg", alt="")
+								.c-card__user @creati
+							ul.o-block
+								.c-button--cirkel.c-button__follow
+									a(href="")
+										i.mdi.mdi-plus
+								.c-card__icon
+									a(href="")
+										i.mdi.mdi-star-outline
+						.c-card__body
+							a(href="")
+								img(src="./assets/img/banner2.jpg", alt="")
+						.c-card__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quaerat!
+						.c-card__footer
+							ul.c-card--list
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-eye
+											span 66
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-comment-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-heart-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-repeat
+							.c-button__grey
+								a(href="") Share
+				.c-grid--col
+					.c-card
+						.c-card__header
+							a(href="").c-card__header-link.o-block.o-flex--cell
+								.c-avatar--small
+									img(src="./assets/img/kim.jpeg", alt="")
+								.c-card__user @kimoi
+							ul.o-block
+								.c-button--cirkel.c-button__follow
+									a(href="")
+										i.mdi.mdi-plus
+								.c-card__icon
+									a(href="")
+										i.mdi.mdi-star-outline
+						.c-card__body
+							a(href="")
+								img(src="./assets/img/banner3.jpg", alt="")
+						.c-card__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quaerat!
+						.c-card__footer
+							ul.c-card--list
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-eye
+											span 98
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-comment-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-heart-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-repeat
+							.c-button__grey
+								a(href="") Share
+				.c-grid--col
+					.c-card
+						.c-card__header
+							a(href="").c-card__header-link.o-block.o-flex--cell
+								.c-avatar--small
+									img(src="./assets/img/dirk.jpeg", alt="")
+								.c-card__user @drakenvis
+							ul.o-block
+								.c-button--cirkel.c-button__follow
+									a(href="")
+										i.mdi.mdi-plus
+								.c-card__icon
+									a(href="")
+										i.mdi.mdi-star-outline
+						.c-card__body
+							a(href="")
+								img(src="./assets/img/banner4.jpg", alt="")
+						.c-card__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quaerat!
+						.c-card__footer
+							ul.c-card--list
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-eye
+											span 995
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-comment-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-heart-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-repeat
+							.c-button__grey
+								a(href="") Share
+				.c-grid--col
+					.c-card
+						.c-card__header
+							a(href="").c-card__header-link.o-block.o-flex--cell
+								.c-avatar--small
+									img(src="./assets/img/jennifer.jpg", alt="")
+								.c-card__user @jehnyiu
+							ul.o-block
+								.c-button--cirkel.c-button__follow
+									a(href="")
+										i.mdi.mdi-plus
+								.c-card__icon
+									a(href="")
+										i.mdi.mdi-star-outline
+						.c-card__body
+							a(href="")
+								img(src="./assets/img/banner5.jpeg", alt="")
+						.c-card__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quaerat!
+						.c-card__footer
+							ul.c-card--list
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-eye
+											span 995
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-comment-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-heart-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-repeat
+							.c-button__grey
+								a(href="") Share
+				.c-grid--col
+					.c-card
+						.c-card__header
+							a(href="").c-card__header-link.o-block.o-flex--cell
+								.c-avatar--small
+									img(src="./assets/img/coco.jpeg", alt="")
+								.c-card__user @mokasun
+							ul.o-block
+								.c-button--cirkel.c-button__follow
+									a(href="")
+										i.mdi.mdi-plus
+								.c-card__icon
+									a(href="")
+										i.mdi.mdi-star-outline
+						.c-card__body
+							a(href="")
+								img(src="./assets/img/banner6.jpeg", alt="")
+						.c-card__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quaerat!
+						.c-card__footer
+							ul.c-card--list
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-eye
+											span 995
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-comment-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-heart-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-repeat
+							.c-button__grey
+								a(href="") Share
+				.c-grid--col
+					.c-card
+						.c-card__header
+							a(href="").c-card__header-link.o-block.o-flex--cell
+								.c-avatar--small
+									img(src="./assets/img/quoc.jpg", alt="")
+								.c-card__user @stuboki
+							ul.o-block
+								.c-button--cirkel.c-button__follow
+									a(href="")
+										i.mdi.mdi-plus
+								.c-card__icon
+									a(href="")
+										i.mdi.mdi-star-outline
+						.c-card__body
+							a(href="")
+								img(src="./assets/img/banner7.jpeg", alt="")
+						.c-card__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quaerat!
+						.c-card__footer
+							ul.c-card--list
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-eye
+											span 995
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-comment-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-heart-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-repeat
+							.c-button__grey
+								a(href="") Share
+				.c-grid--col
+					.c-card
+						.c-card__header
+							a(href="").c-card__header-link.o-block.o-flex--cell
+								.c-avatar--small
+									img(src="./assets/img/john.jpeg", alt="")
+								.c-card__user @johny93
+							ul.o-block
+								.c-button--cirkel.c-button__follow
+									a(href="")
+										i.mdi.mdi-plus
+								.c-card__icon
+									a(href="")
+										i.mdi.mdi-star-outline
+						.c-card__body
+							a(href="")
+								img(src="./assets/img/banner8.jpeg", alt="")
+						.c-card__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quaerat!
+						.c-card__footer
+							ul.c-card--list
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-eye
+											span 995
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-comment-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-heart-outline
+								li.c-card__icon
+									a(href="")
+										i.mdi.mdi-repeat
+							.c-button__grey
+								a(href="") Share
+
 
