--- a/app/src/jade/partials/_header.jade
+++ b/app/src/jade/partials/_header.jade
@@ -13,6 +13,6 @@ nav.c-header
 
 	.c-header--right
 		a(href="#")
-			img(src="../assets/img/logo.svg").c-header--brand-logo
+			img(src="./assets/img/logo.svg").c-header--brand-logo
 		a(href="#").c-header__brand-name stuboki
 
