--- a/app/src/assets/sass/generic/_clearfix.scss
+++ b/app/src/assets/sass/generic/_clearfix.scss
@@ -14,6 +14,15 @@
     }
 }
 
+//Sass mixin Clearfix
+@mixin cf {
+	&:after {
+		content: " ";
+		display: block;
+		clear: both;
+	}
+}
+
 /// Applies the micro clearfix hack popularized by Nicolas Gallagher. Include this mixin on a container if its children are all floated, to give the container a proper height.
 /// The clearfix is augmented with specific styles to prevent borders in flexbox environments
 /// @link http://nicolasgallagher.com/micro-clearfix-hack/ Micro Clearfix Hack
